--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<!-- src/app/app.component.html -->
-
-<div style="text-align:center">
-  <h1>
-    Weather App
-  </h1>
-</div>
-<div>
-  <app-temperature-chart></app-temperature-chart>
-</div>
+<router-outlet></router-outlet>
