--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,17 +1,17 @@
 <!-- current-weather.component.html -->
 
-<div *ngIf="currentWeather">
+<div *ngIf="currentWeather" class="container">
   <h2>Aktualna Pogoda</h2>
-  <p>Data: {{ currentWeather.date }}</p>
-  <p>Temperatura Zewnętrzna: {{ convertToCelsius(currentWeather.temperatureOut) | number:'1.0-1' }} °C</p>
+  <p>Dzień: {{ currentWeather.date }}</p>
+  <p>Temperatura: {{ convertToCelsius(currentWeather.temperatureOut) | number:'1.0-1' }} °C</p>
   <p>Najwyższa Temperatura Dnia: {{ convertToCelsius(currentWeather.hiTemperature) | number:'1.0-1' }} °C</p>
   <p>Najniższa Temperatura Dnia: {{ convertToCelsius(currentWeather.lowTemperature) | number:'1.0-1' }} °C</p>
   <p>Prędkość Wiatru: {{ currentWeather.windSpeed | number:'1.0-1' }} km/h</p>
   <p>Kierunek Wiatru: {{ currentWeather.windDirection }}</p>
   <p>Opady Deszczu: {{ currentWeather.rain | number:'1.0-1' }} mm</p>
   <p>Wilgotność: {{ currentWeather.outHuminity | number:'1.0-1' }}%</p>
-  <p>Odczucie Temperatury: {{ currentWeather.windChill | number:'1.0-1' }} °C</p>
-  <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} hPa</p>
+  <p>Odczucie Temperatury: {{ convertToCelsius(currentWeather.windChill) | number:'1.0-1' }} °C</p>
+  <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} bar</p>
   <p>Ostatnie Pobranie Danych: {{ currentWeather.date }} o {{ currentWeather.time }}</p>
 
   <div>
