--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div>
-  <h2>Witaj na stronie głównej</h2>
-  <p>Wybierz jedną z opcji poniżej:</p>
+  <h2>Witam na portalu internetowym do obsługi uczelnianej stacji pogodowej</h2>
+  <!--p>Wybierz jedną z opcji poniżej:</p-->
   <button routerLink="/register">Rejestracja</button>
   <button routerLink="/login">Logowanie</button>
+
+  <app-current-weather></app-current-weather>
 </div>
