--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,16 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <label for="email">Email:</label>
-  <input type="email" id="email" formControlName="email" required>
+  <div class="input-container">
+    <i class="icon">📧</i>
+    <label for="email">E-mail:</label>
+    <input type="email" id="email" formControlName="email" required>
+  </div>
 
-  <label for="password">Password:</label>
-  <input type="password" id="password" formControlName="password" required>
+  <div class="input-container">
+    <i class="icon">🔒</i>
+    <label for="password">Hasło:</label>
+    <input type="password" id="password" formControlName="password" required>
+  </div>
 
   <button type="submit" [disabled]="!loginForm.valid">Login</button>
 </form>
+
