--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,26 @@
 <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
-  <label for="email">Email:</label>
+  <label for="email">E-mail:</label>
   <input type="email" id="email" formControlName="email" required>
+  <div *ngIf="registrationForm.get('email')?.hasError('email') && registrationForm.get('email')?.touched" class="error-message">
+    Zły format e-mail.
+  </div>
 
-  <label for="password">Password:</label>
+  <label for="password">Hasło:</label>
   <input type="password" id="password" formControlName="password" required>
+  <div *ngIf="registrationForm.get('password')?.hasError('minlength') && registrationForm.get('password')?.touched" class="error-message">
+    Hasło musi zawierać conajmniej 6 znaków.
+  </div>
 
-  <label for="firstName">First Name:</label>
+  <label for="password">Powtórz hasło:</label>
+  <input type="password" id="password2" formControlName="password2" required>
+  <div *ngIf="registrationForm.hasError('passwordMismatch') && registrationForm.get('password2')?.touched" class="error-message">
+    Hasła nie są takie same.
+  </div>
+
+  <label for="firstName">Imię:</label>
   <input type="text" id="firstName" formControlName="firstName" required>
 
-  <label for="lastName">Last Name:</label>
+  <label for="lastName">Nazwisko:</label>
   <input type="text" id="lastName" formControlName="lastName" required>
 
   <button type="submit" [disabled]="!registrationForm.valid">Register</button>
