--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -4,15 +4,15 @@
     <h2>Aktualna Pogoda</h2>
     <button (click)="toggleDetailedData()">Przełącz na szczegółowe dane</button>
     <p>Dzień: {{ currentWeather.date }}</p>
-    <p>Temperatura: {{ weatherService.convertToCelsius(currentWeather.temperatureOut) | number:'1.0-1' }} °C</p>
-    <p>Najwyższa Temperatura Dnia: {{ weatherService.convertToCelsius(currentWeather.hiTemperature) | number:'1.0-1' }} °C</p>
-    <p>Najniższa Temperatura Dnia: {{ weatherService.convertToCelsius(currentWeather.lowTemperature) | number:'1.0-1' }} °C</p>
-    <p>Prędkość Wiatru: {{ currentWeather.windSpeed | number:'1.0-1' }} km/h</p>
+    <p>Temperatura: {{ currentWeather.temperatureOut | number:'1.0-1' }} °C</p>
+    <p>Najwyższa Temperatura Dnia: {{ currentWeather.hiTemperature | number:'1.0-1' }} °C</p>
+    <p>Najniższa Temperatura Dnia: {{ currentWeather.lowTemperature | number:'1.0-1' }} °C</p>
+    <p>Prędkość Wiatru: {{ currentWeather.windSpeed | number:'1.0-1' }} m/s</p>
     <p>Kierunek Wiatru: {{ currentWeather.windDirection }}</p>
     <p>Opady Deszczu: {{ currentWeather.rain | number:'1.0-1' }} mm</p>
     <p>Wilgotność: {{ currentWeather.outHuminity | number:'1.0-1' }}%</p>
     <p>Odczucie Temperatury: {{ weatherService.convertToCelsius(currentWeather.windChill) | number:'1.0-1' }} °C</p>
-    <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} bar</p>
+    <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} hPa</p>
     <p>Ostatnie Pobranie Danych: {{ currentWeather.date }} o {{ currentWeather.time }}</p>
   </div>
 
@@ -20,18 +20,18 @@
     <h2>Aktualna Pogoda</h2>
     <button (click)="toggleDetailedData()">Przełącz na szczegółowe dane</button>
     <p>Dzień: {{ currentWeather.date }}</p>
-    <p>Temperatura: {{ weatherService.convertToCelsius(currentWeather.temperatureOut) | number:'1.0-1' }} °C</p>
-    <p>Najwyższa Temperatura Dnia: {{ weatherService.convertToCelsius(currentWeather.hiTemperature) | number:'1.0-1' }} °C</p>
-    <p>Najniższa Temperatura Dnia: {{ weatherService.convertToCelsius(currentWeather.lowTemperature) | number:'1.0-1' }} °C</p>
-    <p>Prędkość Wiatru: {{ currentWeather.windSpeed | number:'1.0-1' }} km/h</p>
+    <p>Temperatura: {{ currentWeather.temperatureOut | number:'1.0-1' }} °C</p>
+    <p>Najwyższa Temperatura Dnia: {{ currentWeather.hiTemperature | number:'1.0-1' }} °C</p>
+    <p>Najniższa Temperatura Dnia: {{ currentWeather.lowTemperature | number:'1.0-1' }} °C</p>
+    <p>Prędkość Wiatru: {{ currentWeather.windSpeed | number:'1.0-1' }} m/s</p>
     <p>Kierunek Wiatru: {{ currentWeather.windDirection }}</p>
     <p>Opady Deszczu: {{ currentWeather.rain | number:'1.0-1' }} mm</p>
     <p>Wilgotność: {{ currentWeather.outHuminity | number:'1.0-1' }}%</p>
     <p>Odczucie Temperatury: {{ weatherService.convertToCelsius(currentWeather.windChill) | number:'1.0-1' }} °C</p>
-    <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} bar</p>
+    <p>Ciśnienie: {{ currentWeather.bar | number:'1.0-1' }} hPa</p>
 
     <p>Punkt Rosy: {{ currentWeather.dewPt }}</p>
-    <p>Prędkość Wiatru (Hi): {{ currentWeather.hiSpeed }} km/h</p>
+    <p>Prędkość Wiatru (Hi): {{ currentWeather.hiSpeed }} m/s</p>
     <p>Kierunek Wiatru (Hi): {{ currentWeather.hiDirection }}</p>
     <p>Indeks Ciepła: {{ currentWeather.heatIndex }}</p>
     <p>Indeks THW: {{ currentWeather.thwIndex }}</p>
